Blender force close with EXCEPTION_ACCESS_VIOLATION #52064

Closed
opened 2017-07-15 02:39:19 +02:00 by Laurent Marechal · 33 comments

System Information

  • Windows 10 V1703 build 15063.483
  • GPU NVidia 660Ti tested with drivers : 382.33 382.53 384.76

Blender Version

  • Blender 64bits, tested versions (fresh download and install zip version, also cleaned the user profile between each):
    Official 2.78c (same one I was using without issue since the release)
    blender-2.78-c9817c6-win64
    blender-2.80-2a48927-win64-vc14

Short description of error
I have used the same system for year without issues.
Since a few days when I try to start blender it just crash with:
Error: EXCEPTION_ACCESS_VIOLATION
If fresh install and nothing in the user profile, it does start, but accessing the user preference, doing anything related to cycle or rendering cause the crash.
If there is anything in the user profile, it does not even start, just crash immediately.
As there was no change to blender itself and it's consistant with the 3 last GPU drivers (including the one that was working for sure) it could be related to one of the recent Windows update.

Exact steps for others to reproduce the error

  • Try to start Blender... crash

OS and drivers are fully up-to-date. Cleaned and reinstalled GPU drivers each time.
Antivirus do not change anything.
File location do not change anything.
No other Python installed.
Tested (when it accept to start) with old, recent and new .blend file with the same result.
There is test.crash.txt or crash file generated in the tmp folder

Running with factory setting does not even popup the windows, it crash.
Running with -d report the two attached file depending if there is anything in the user roaming profile or not.
blender_with_roaming_data.txt
blender_without_roaming_data.txt

**System Information** - Windows 10 V1703 build 15063.483 - GPU NVidia 660Ti tested with drivers : 382.33 382.53 384.76 **Blender Version** - Blender 64bits, tested versions (fresh download and install zip version, also cleaned the user profile between each): Official 2.78c (same one I was using without issue since the release) blender-2.78-c9817c6-win64 blender-2.80-2a48927-win64-vc14 **Short description of error** I have used the same system for year without issues. Since a few days when I try to start blender it just crash with: Error: EXCEPTION_ACCESS_VIOLATION If fresh install and nothing in the user profile, it does start, but accessing the user preference, doing anything related to cycle or rendering cause the crash. If there is anything in the user profile, it does not even start, just crash immediately. As there was no change to blender itself and it's consistant with the 3 last GPU drivers (including the one that was working for sure) it could be related to one of the recent Windows update. **Exact steps for others to reproduce the error** - Try to start Blender... crash OS and drivers are fully up-to-date. Cleaned and reinstalled GPU drivers each time. Antivirus do not change anything. File location do not change anything. No other Python installed. Tested (when it accept to start) with old, recent and new .blend file with the same result. There is test.crash.txt or crash file generated in the tmp folder Running with factory setting does not even popup the windows, it crash. Running with -d report the two attached file depending if there is anything in the user roaming profile or not. [blender_with_roaming_data.txt](https://archive.blender.org/developer/F667469/blender_with_roaming_data.txt) [blender_without_roaming_data.txt](https://archive.blender.org/developer/F667470/blender_without_roaming_data.txt)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @lmarecha

Added subscriber: @lmarecha

Added subscriber: @fablefox

Added subscriber: @fablefox

Was crash log generated? Please upload if it does. Thanks.
https://docs.blender.org/manual/en/dev/troubleshooting/crash.html

Also, launch Blender from the command line with -d option and attach as text file here any error printed out in the console (do not paste it directly in comment).

It also worth running Blender with --debug-cycles command line argument to make prints much more verbose to see where exactly things stuck.

Was crash log generated? Please upload if it does. Thanks. https://docs.blender.org/manual/en/dev/troubleshooting/crash.html Also, launch Blender from the command line with -d option and attach as text file here any error printed out in the console (do not paste it directly in comment). It also worth running Blender with --debug-cycles command line argument to make prints much more verbose to see where exactly things stuck.

Hi

Was crash log generated? Please upload if it does. Thanks.

No crash log generated (as mentioned in original post)

launch Blender from the command line with -d option

See previous post and attachment

Blender with --debug-cycles command line argument

blender_debug_cycle.txt
Attached, run with an empty user roaming profile.

After crash, the tmp folder defined both in the old user preference or in the Windows EV, does not contain anything related to blender
With arguments -d --debug_all --factory-startup there is no additional info reported.
When using -d --debug_all --debug-gpu only additional info are:

Using OpenGL 4.3 debug facilities
GL application marker: Successfully hooked OpenGL debug callback.
GL_CONTEXT_PROFILE_MASK = 0x2 (compatibility profile
```)

Hi >Was crash log generated? Please upload if it does. Thanks. No crash log generated (as mentioned in original post) >launch Blender from the command line with -d option See previous post and attachment >Blender with --debug-cycles command line argument [blender_debug_cycle.txt](https://archive.blender.org/developer/F668683/blender_debug_cycle.txt) Attached, run with an empty user roaming profile. After crash, the tmp folder defined both in the old user preference or in the Windows EV, does not contain anything related to blender With arguments -d --debug_all --factory-startup there is no additional info reported. When using -d --debug_all --debug-gpu only additional info are: ``` Using OpenGL 4.3 debug facilities GL application marker: Successfully hooked OpenGL debug callback. GL_CONTEXT_PROFILE_MASK = 0x2 (compatibility profile ```)

If useful, I ran procmon on it, it seems to break when reaching the GUI/various graphical dll. I tried to uninstall, reinit and reinstall the GPU drivers, but still same result.
Logfile.zip

If useful, I ran procmon on it, it seems to break when reaching the GUI/various graphical dll. I tried to uninstall, reinit and reinstall the GPU drivers, but still same result. [Logfile.zip](https://archive.blender.org/developer/F668690/Logfile.zip)

To get driver issue out of the way, you can try software rendering.

Try replacing the opengl driver with a software version from

http://download.blender.org/ftp/sergey/softwaregl/win64/opengl32.dll

just copy the dll into your blender folder (and remove it when you are done testing, performance will be very bad otherwise) and see if that improves things.

To get driver issue out of the way, you can try software rendering. Try replacing the opengl driver with a software version from http://download.blender.org/ftp/sergey/softwaregl/win64/opengl32.dll just copy the dll into your blender folder (and remove it when you are done testing, performance will be very bad otherwise) and see if that improves things.

with the dll in the folder, the same result happen. There is also no additional debug info returned except the opengl selection/force.
See attached file with various debug flag added:
with_opengl.dll.txt

Add:
I used DDU to remove all trace of drivers from the system, this time also removed dome Intel driver from the integrated IGP just in case.. After reboot and installing the latest NVidia the same happen (I kind of was wishing it could be some mismatch with Intel IGP but no)

with the dll in the folder, the same result happen. There is also no additional debug info returned except the opengl selection/force. See attached file with various debug flag added: [with_opengl.dll.txt](https://archive.blender.org/developer/F669310/with_opengl.dll.txt) Add: I used DDU to remove all trace of drivers from the system, this time also removed dome Intel driver from the integrated IGP just in case.. After reboot and installing the latest NVidia the same happen (I kind of was wishing it could be some mismatch with Intel IGP but no)

Added subscriber: @matali23

Added subscriber: @matali23

and with windows 7? Windows 10 is known for it's instability. It's only 2 years old...
At least on windows 7, the bug is not reproducible.

and with windows 7? Windows 10 is known for it's instability. It's only 2 years old... At least on windows 7, the bug is not reproducible.

On an other system with W7 it works, but not the same soft/hard of course.
If it would have been never working since the beginning under W10, I would have guessed a W10 issue, but here, I had no issues on W10 with same hardware/drivers since more than one years (even after the W10 update). And I cannot reinstall the full machine with W7 just for a test (blender is far to be the only thing installed on the main machine)

On an other system with W7 it works, but not the same soft/hard of course. If it would have been never working since the beginning under W10, I would have guessed a W10 issue, but here, I had no issues on W10 with same hardware/drivers since more than one years (even after the W10 update). And I cannot reinstall the full machine with W7 just for a test (blender is far to be the only thing installed on the main machine)

I did more test on this one and ran it in the Windows debugger. Tested it with the same 3 set of drivers, including the one I know it was working before.
I'm attaching the file. Is there a command line option to disable the use of cuda ? (as a test)

blender_Windbg.txt

And I justed tested with the new released driver 384.76 same result.

I did more test on this one and ran it in the Windows debugger. Tested it with the same 3 set of drivers, including the one I know it was working before. I'm attaching the file. Is there a command line option to disable the use of cuda ? (as a test) [blender_Windbg.txt](https://archive.blender.org/developer/F678882/blender_Windbg.txt) And I justed tested with the new released driver 384.76 same result.

Additional test:
I removed my graphic card, cleaned up all drivers trace from nvidia.
rebooted
ran blender, it complained about no GPU or opengl.
Enabled the dll for software opengl and it started.
Then I installed a new GPU (1080Ti), installed the latest drivers from nvidia
Started blender and... same issue as before, it crash at the same location/thing (the cuda dll)
I can't believe I'm the only one....

Additional test: I removed my graphic card, cleaned up all drivers trace from nvidia. rebooted ran blender, it complained about no GPU or opengl. Enabled the dll for software opengl and it started. Then I installed a new GPU (1080Ti), installed the latest drivers from nvidia Started blender and... same issue as before, it crash at the same location/thing (the cuda dll) I can't believe I'm the only one....

Added subscribers: @MaiLavelle, @Sergey, @mont29

Added subscribers: @MaiLavelle, @Sergey, @mont29

So this is a CUDA/driver issue…

@Sergey or @MaiLavelle may have ideas of things to try/check here?

So this is a CUDA/driver issue… @Sergey or @MaiLavelle may have ideas of things to try/check here?
Member

Added subscriber: @LazyDodo

Added subscriber: @LazyDodo
Member

@fablefox, don't know how else to contact you, so sadly i'll have to clutter up this ticket . I see you ask for crashdumps quite frequently, the windows version of blender downloaded of our website will NEVER make a crashdump, so you can save your self some posts by skipping that step in the future.

@fablefox, don't know how else to contact you, so sadly i'll have to clutter up this ticket . I see you ask for crashdumps quite frequently, the windows version of blender downloaded of our website will *NEVER* make a crashdump, so you can save your self some posts by skipping that step in the future.

Tested with new nVidia driver 385.28 after a clean upgrade... same result.

Tested with new nVidia driver 385.28 after a clean upgrade... same result.

Might have found something. When using GPU-Z (not sure if it's info is accurate or not), it does not show that OpenCl, CUDA or PhysX are available. But they are installed and drivers when instaled clean (only graphic drivers and PhysX, no #D stuff installed)

image.png

Tried with, again, a new drivers install, with same result.

Might have found something. When using GPU-Z (not sure if it's info is accurate or not), it does not show that OpenCl, CUDA or PhysX are available. But they are installed and drivers when instaled clean (only graphic drivers and PhysX, no #D stuff installed) ![image.png](https://archive.blender.org/developer/F718977/image.png) Tried with, again, a new drivers install, with same result.
Member

I put a build that will produce crash information a while ago here : http://graphicall.org/1222 (not the most recent build, but given all builds seem to crash for you it shouldn't matter that much)

can you run this build, and if it crashes look for the crash log in either the same directory as your blender.exe or in your %temp% folder (you can just hit windows+r enter %temp% and it'll open up the right folder for you)

I put a build that will produce crash information a while ago here : http://graphicall.org/1222 (not the most recent build, but given all builds seem to crash for you it shouldn't matter that much) can you run this build, and if it crashes look for the crash log in either the same directory as your blender.exe or in your %temp% folder (you can just hit windows+r enter %temp% and it'll open up the right folder for you)

Thanks. It does crash and generate the dump log. There is really something wrong with the cuda detection.

blender.crash.txt

Thanks. It does crash and generate the dump log. There is really something wrong with the cuda detection. [blender.crash.txt](https://archive.blender.org/developer/F719000/blender.crash.txt)
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

Looked in the matching source, it's the call to cuInit that makes it crash, @brecht do you have any clever ideas how to trouble shoot this?

@lmarecha do other applications that use cuda work?

Looked in the matching source, it's the call to cuInit that makes it crash, @brecht do you have any clever ideas how to trouble shoot this? @lmarecha do other applications that use cuda work?

CUDA-Z can be used to test if the CUDA installation is working: http://cuda-z.sourceforge.net/

My guess is that the NVidia driver was not fully installed or uninstalled at some point, and that there's an nvcuda.dll remaining that will crash when used because some other files are missing. Perhaps some conflict between Windows-installed and manually installed drivers, or a virus scanner interfered. Typically my advice would be to uninstall all graphics drivers (also Intel and AMD if they exist), and then reinstall all. But it seems that has been tried here already.

cuInit() is the very first function we call, there's not a lot we could be doing wrong with that. To fix this crash on the Blender side we would need to either not call into the library at all (but we don't know how to detect that case), or we could try handling the signal and recovering from the crash (which could be impossible, but maybe worth trying anyway).

CUDA-Z can be used to test if the CUDA installation is working: http://cuda-z.sourceforge.net/ My guess is that the NVidia driver was not fully installed or uninstalled at some point, and that there's an `nvcuda.dll` remaining that will crash when used because some other files are missing. Perhaps some conflict between Windows-installed and manually installed drivers, or a virus scanner interfered. Typically my advice would be to uninstall all graphics drivers (also Intel and AMD if they exist), and then reinstall all. But it seems that has been tried here already. `cuInit()` is the very first function we call, there's not a lot we could be doing wrong with that. To fix this crash on the Blender side we would need to either not call into the library at all (but we don't know how to detect that case), or we could try handling the signal and recovering from the crash (which could be impossible, but maybe worth trying anyway).

Thank, I downlaoded Cuda-Z. It crash as soon as I try to execute it. So the cuda part is definitivelly bad.
I did already try to unsintall and reinstall, even using DDU to cleanup. I did open a ticket with NVidia, I don't know if they usually respond or not to such issue.

  • While it's not directly a blender issue it seems, it would still be nice if blender would intercept the error and not crash, it could run in "degraded mode" (using only CPU) and inform the user.
Thank, I downlaoded Cuda-Z. It crash as soon as I try to execute it. So the cuda part is definitivelly bad. I did already try to unsintall and reinstall, even using DDU to cleanup. I did open a ticket with NVidia, I don't know if they usually respond or not to such issue. - While it's not directly a blender issue it seems, it would still be nice if blender would intercept the error and not crash, it could run in "degraded mode" (using only CPU) and inform the user.
Member

cuInit is supposed to return an error code, and we deal with that in exactly that way in case it fails (not crash, but run in a mode not offering cuda acceleration),the problem on your machine, nvidia's code seems to be ruining the stack pointer, it's pretty much impossible to protect your self from that or recover from it.

cuInit is supposed to return an error code, and we deal with that in exactly that way in case it fails (not crash, but run in a mode not offering cuda acceleration),the problem on your machine, nvidia's code seems to be ruining the stack pointer, it's pretty much impossible to protect your self from that or recover from it.

This issue was referenced by blender/cycles@ceaf420dc9

This issue was referenced by blender/cycles@ceaf420dc9c2d42b89b2bec3fe0bbff94a66c571

This issue was referenced by 43a6cf1504

This issue was referenced by 43a6cf150412594240b36e74b69f4f5f807e9b03

I've committed some changes to try to recover from crashes in nvcuda.dll, which may or may not work, I can't test it myself. Tomorrow's build from https://builder.blender.org/download/ should have it.

I've committed some changes to try to recover from crashes in nvcuda.dll, which may or may not work, I can't test it myself. Tomorrow's build from https://builder.blender.org/download/ should have it.

Downloaded blender-2.79-049932c-win64 from daily build.

It's indeed not crashing anymore at start-up, and all GPU/cuda selection are disabled.

Downloaded blender-2.79-049932c-win64 from daily build. It's indeed not crashing anymore at start-up, and all GPU/cuda selection are disabled.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Brecht Van Lommel self-assigned this 2017-08-23 13:21:22 +02:00

Thanks for testing, I'll consider this resolved from the Blender side then. Not much else we can do if the driver itself is broken.

Thanks for testing, I'll consider this resolved from the Blender side then. Not much else we can do if the driver itself is broken.

Hi, all.
I was having a problem similar to this in v4 that lead me to this thread.
It was similar to the issue above in nature, but turned out to be rather trivial.

I went to
Edit > Preferences... > System > Cycles Render Devices
and saw that it was set to None for some reason. I have an Nvidia GPU, so I set it to Cuda, and it no longer seems to crash.

Not sure how it got set to that, but maybe this will help someone in the future.

image

Hi, all. I was having a problem similar to this in v4 that lead me to this thread. It was similar to the issue above in nature, but turned out to be rather trivial. I went to Edit > Preferences... > System > Cycles Render Devices and saw that it was set to None for some reason. I have an Nvidia GPU, so I set it to Cuda, and it no longer seems to crash. Not sure how it got set to that, but maybe this will help someone in the future. ![image](/attachments/98c73106-caa0-4cbb-bda5-7a097031a51f)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52064
No description provided.